Dynamically loads list of switches for adding computers
